Refactor: 답안 상속 구조 변경