@@ -9,12 +9,11 @@ import com.onetuks.csphinxserver.application.command.answer.ShortAnswerEditComma
 import com.onetuks.csphinxserver.domain.answer.AnswerType;
 import com.onetuks.csphinxserver.domain.answer.ChoiceAnswer;
 import com.onetuks.csphinxserver.domain.answer.DescriptiveAnswer;
+import com.onetuks.csphinxserver.domain.answer.EmbeddingValue;
 import com.onetuks.csphinxserver.domain.answer.ShortAnswer;
 import java.time.LocalDateTime;
-import java.util.List;
 import java.util.Random;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import java.util.stream.IntStream;
 
 public class AnswerFixture {
@@ -22,15 +21,18 @@ public class AnswerFixture {
   private static final Random random = new Random();
 
   public static ChoiceAnswer createChoiceAnswer(String answerId, String questionId) {
-    return new ChoiceAnswer(answerId, questionId, AnswerType.CHOICE, createAnswerNumber(), LocalDateTime.now());
+    return new ChoiceAnswer(answerId, questionId, AnswerType.CHOICE, createAnswerNumber(),
+        LocalDateTime.now());
   }
 
   public static ShortAnswer createShortAnswer(String answerId, String questionId) {
-    return new ShortAnswer(answerId, questionId, AnswerType.SHORT, createAnswerWords(), LocalDateTime.now());
+    return new ShortAnswer(answerId, questionId, AnswerType.SHORT, createAnswerWords(),
+        LocalDateTime.now());
   }
 
   public static DescriptiveAnswer createDescriptiveAnswer(String answerId, String questionId) {
-    return new DescriptiveAnswer(answerId, questionId, AnswerType.DESCRIPTION, createEmbeddedVector(), LocalDateTime.now());
+    return new DescriptiveAnswer(answerId, questionId, AnswerType.DESCRIPTION,
+        createEmbeddedValue(), LocalDateTime.now());
   }
 
   public static ChoiceAnswerAddCommand createChoiceAddCommand(String questionId) {
@@ -69,15 +71,15 @@ public class AnswerFixture {
     return String.valueOf(random.nextInt(4) + 1);
   }
 
-  private static Set<String> createAnswerWords() {
-    return IntStream.range(1, random.nextInt(10))
-        .mapToObj(i -> "word" + i)
-        .collect(Collectors.toSet());
+  private static String createAnswerWords() {
+    return UUID.randomUUID().toString();
   }
 
-  private static List<Double> createEmbeddedVector() {
-    return IntStream.range(0, random.nextInt(4) + 1)
-        .mapToObj(i -> random.nextDouble())
-        .collect(Collectors.toList());
+  private static EmbeddingValue createEmbeddedValue() {
+    return new EmbeddingValue(
+        UUID.randomUUID().toString(),
+        IntStream.range(0, random.nextInt(4) + 1)
+            .mapToObj(i -> random.nextDouble())
+            .toList());
   }
 }
